# Multiplayer-Snake-Cpp

./: CMakeLists.txt  CMakeSettings.json
MPSnake/: CMakeLists.txt  Client.cpp  Client.hpp  Game.hpp  Message.hpp  Serialization.h  Serialization.hpp  Server.cpp  Server.hpp
